# wamplv-benchmark

./: .clang-format  .gitmodules  CMakeLists.txt
.github/workflows/: linux.yml  windows.yml
publish/: CMakeLists.txt  version.h
publish/src/: main.cpp
